--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,18 @@
 
         <div>
             <h2 class="Heading-Left">Contact</h2>
-
-
-
-
         </div>
 
+        <div>
+            <form>
+            <h3>Name</h3>
+            <input type="text" name="John Smith" placeholder="John Smith">
+            <h3>Email</h3>
+            <input type="text" placeholder="example@gmail.com">
+            <h3>Message</h3>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            </form>
+        </div>
 
     </body>
 
