--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
         
     </body>
     
-      <Div class="mainport">
-        <img src="Assets/images/20180610_111910.jpg" alt="Me1"  width="250" height="300">
-        <img src="Assets/images/IMG_1407.jpg" alt="Me3" width="250" height="300">
-        <img src="Assets/images/IMG_1814.jpg" alt="Me2" width="250" height="300">
-        <img src="Assets/images/IMG_3599.JPG" alt="M4" width="250" height="300">
+      <Div class="pics">
+        <img src="Assets/images/20180610_111910.jpg" class="Me1" alt="Me1"  width="250" height="300">
+        <img src="Assets/images/IMG_1407.jpg" class="Me3"alt="Me3" width="250" height="300">
+        <img src="Assets/images/IMG_1814.jpg" class="Me2" alt="Me2" width="250" height="300">
+        <img src="Assets/images/IMG_3599.JPG" class="Me4" alt="M4" width="250" height="300">
 
 
       </Div>
