--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,15 @@
             <textarea name="" id="" cols="30" rows="10"></textarea>
             </form>
         </div>
+        
+        <footer> 
+            <div class="Footer">
+                 <p>&copy Copyright 2019</p>
+            </div>
+    
+        </footer>
+
+
 
     </body>
 
